--- a/views/pets.ejs
+++ b/views/pets.ejs
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>
+        Pet Type: <%- pet -%>
+    </p>
+    <p>
+        Pet Age: <%- age -%>
+    </p>
+
+    <script src="/javascripts/methods.js"></script>
 </body>
 </html>
